# localcode

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  agent.py  app.py  constants.py  docker-compose.prod.yml  docker-compose.yml  github.py  logger.py  main.py  pyproject.toml  pytest.ini  run_api_backend.sh  run_worker.sh  server.py
.cursor/: mcp.json
.github/workflows/: README.md  ci.yml  pr-comment.yml  publish-agent-sandbox-image.yml  test.yml
agents/: __init__.py  checkpoint.py  deep_agent_stream.py  github_coder.py  github_llm.py  github_reviewer.py  reviewer_tools.py  usage_callback.py
api/: __init__.py  agents.py  auth.py  billing.py  connections.py  dashboard.py  deps.py  health.py  jwt_session.py  onboarding.py  organization.py  user_org.py  workspaces.py
api/wh/: __init__.py  github.py  github_app.py
db/: __init__.py  client.py  pg_locks.py  repo_agent_lock.py
docker/agent-sandbox/: .dockerignore  Dockerfile  docker-compose.yml
model/: __init__.py  enums.py  schemas.py  tables.py
scripts/: deploy-prod.sh
services/: __init__.py  dodo_billing.py  user_service.py  wallet.py
services/github/: __init__.py  agent_daytona.py  agent_wallet_gate.py  client.py  coder_daytona.py  coder_labels.py  (+19 more)
services_entrypoints/: __init__.py  api_backend.py  worker.py
task_queue/: __init__.py  broker.py  tasks.py
tests/: __init__.py  conftest.py  db_seed.py  test_agent_daytona.py  test_agents_reviewer_settings_api.py  test_agents_workflow_usage_api.py  test_api_agents.py  test_api_auth.py  test_api_connections.py  test_api_health.py  test_api_onboarding.py  test_app.py  test_broker.py  test_coder_labels.py  test_coder_pr_trigger_resolve.py  test_coder_trigger_resolve.py  test_connections_github_install.py  test_constants.py  test_dashboard_api.py  test_db_client.py  test_db_init.py  test_deps.py  test_dodo_billing.py  test_enums.py  test_github_client_helpers.py  test_github_thread_ids.py  test_github_webhook_installation.py  test_health_api.py  test_installation_token_helpers.py  test_issue_payload.py  test_jwt_session.py  test_logger.py  test_main.py  test_models.py  test_onboarding_validation.py  test_organization_api.py  test_pending_github_installation.py  test_pr_conversation_context.py  test_pr_payload.py  test_repository_bootstrap.py  (+14 more)
