[project]
name = "localcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "deepagents>=0.4.10",
    "fastapi>=0.115.0",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.12.5",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg[binary,pool]>=3.3",
    "pyjwt[crypto]>=2.8.0",
]

[project.scripts]
serve = "main:main"
