[project]
name = "greagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.0",
  "deepagents>=0.4.10",
  "fastapi>=0.115.0",
  "langchain>=1.2.12",
  "langchain-ollama>=1.0.1",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.12.5",
  "pyjwt[crypto]>=2.8.0",
  "langchain-daytona>=0.0.4",
  "daytona>=0.153.0",
  "dramatiq[rabbitmq]>=1.17.0",
  "dodopayments[webhooks]>=1.92.1",
  "axiom-py>=0.10.0",
  "structlog>=25.5.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
serve = "main:main"
api-backend = "services_entrypoints.api_backend:main"
worker = "services_entrypoints.worker:main"

[tool.setuptools]
packages = [
  "agents",
  "api",
  "db",
  "model",
  "task_queue",
  "services",
  "services_entrypoints",
]
py-modules = ["logger", "constants", "app", "main"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
